# virtool-workflow

./: .codacy.yml  .deepsource.toml  .drone.yml  .gitignore  .mise.toml  .pre-commit-config.yaml  .pre-commit-config.yml  .releaserc  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  changelog.md  docker-compose.yml  pydoc-markdown.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  workflow.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS
.github/act/: run.sh
.github/workflows/: auto-merge-to-develop.yml  ci.yml  codacy.yml  create-release-branch.yml  create-release-on-merge.yml  docker-build.yml  docker-release.yml  enforce-changelog.yml  integration-test.yml  integration_test.yml  nightly-build.yml  poetry-check.yml  publish.yml  publish_to_pypi.yml  semantic-release.yml  test_ci.yml
.vim/: coc-settings.json
base_image/: Dockerfile  README.md
docker/: Dockerfile  README.md
docker/run_jobs_api_server/: Dockerfile
docker_compose/: docker-compose.yml
docker_compose/run_jobs_api_server/: Dockerfile
docs/: README.md  autofixture.rst  conf.py  contributing.rst  fixtures.rst  hooks.rst  index.rst  quickstart.md  quickstart.rst  reference.rst  showcase.py
docs/_ext/: autofixture.py
docs/_static/: custom.css
docs/tutorials/: analysis_fixture_examples.md  analysis_fixture_examples.rst
example/ml/: trained_rf.rda
example/modules/: _fixtures.py  _workflow.py
example/workflows/: default.py
fixtures/: __init__.py  _fixture.py  _scope.py  _utils.py  errors.py
fixtures/tests/: test_fixture_context_behavior.py  test_fixture_decoration.py  test_fixture_scope.py  test_fixtures.py
integration/: conftest.py
integration/_fixtures/: containers.py  jobs.py  workflows.py
integration_test_workflow/: .env  README.md  api-server-Dockerfile  build.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  latest-workflow-Dockerfile  run.sh
integration_test_workflow/workflow/: Dockerfile  run_workflow.sh  workflow.py
integration_tests/: .env  README.md  conftest.py  docker-compose.api.yml  docker-compose.workflow.yml  run.py  run.sh  test_job.py
integration_tests/analysis/: .env  test_case.yml  workflow.py
integration_tests/hmms/: .env  Dockerfile  test_case.yml  workflow.py
integration_tests/index/: .env
integration_tests/indexes/: .env  Dockerfile  test_case.yml  workflow.py
integration_tests/samples/: .env  test_case.yml  workflow.py
integration_tests/subtractions/: .env  Dockerfile  test_case.yml  workflow.py
k3s/: README.md  deploy.sh  refesh.sh  teardown.sh
k3s/create_sample/: deployment.yml
k3s/create_subtraction/: deployment.yml
k3s/dashboard/: README.md
k3s/jobsAPI/: deployment.yml  service.yml
k3s/mongo/: deployment.yml  service.yml
k3s/postgres/: config.yml  deployment.yml  service.yml
k3s/redis/: dashboard-service.yml  dashboard.yml  deployment.yml  service.yml
k3s/server/: deployment.yml  service.yml  volume.yml
sphinx/: FIXTURE_README.md  README.md  build-docs.sh  conf.py  index.rst
tests/: .pytest-runtimes  Dockerfile  README.md  __init__.py  conftest.py  docker-compose.ci.yml  docker-compose.pytest.yml  docker-compose.yml  docker_fixtures.py  example_workflow.py  pytest.ini  test.sh  test_builtin_fixtures.py  test_cmd.py  test_decorator_api.py  test_discovery.py  test_exec.py  test_executor.py  test_exit.py  test_fastqc.py  test_fixtures.py  test_hook.py  test_input_file_download.py  test_runtime.py  test_runtime_hooks.py  test_sentry.py  test_skewer.py  test_status.py  test_subprocess.py  test_utils.py  test_workflow.py  test_workflow_fixtures.py  test_workflow_scope.py  test_workflow_updates.py  workflow_with_fixtures.py
tests/__snapshots__/: test_api.ambr  test_fastqc.ambr  test_status.ambr
tests/analysis/: expected.rev.2.bt2  test_analysis.py  test_analysis_fixture.py  test_analysis_fixtures.py  test_fixtures_available.py  test_hmms.py  test_indexes.py  test_sample_fixture.py  test_skewer.py
tests/api/: fixtures.py  test_analyses_api.py  test_hmm_api.py  test_indexes_api.py  test_jobs.py  test_samples_api.py  test_subtractions_api.py  test_utils.py  uploads.py
tests/caching/: test_api_caching.py  test_local.py
tests/config/: test_config.py
tests/data/: test_analyses.py  test_hmms.py  test_indexes.py  test_jobs.py  test_ml.py  test_samples.py  test_subtractions.py
tests/database/: test_inmemory_db.py  test_mongo_database_collection.py
tests/discovery/: discoverable_fixtures.py  discoverable_workflow.py  test_discovery.py
tests/execution/: test_fixture_hooks.py  test_hooks.py  test_run_subprocess.py
tests/files/: terminated_workflow.py
tests/fixtures/: __init__.py  db.py  execution.py  redis.py  scope.py  workflow.py
tests/integration/: README.md  cli.py  utils.py  (+8 more)
virtool-integration/: pyproject.toml
virtool-integration/virtool_integration/: .env  README.md  api-server-Dockerfile  cli.py  docker-compose.dev.yml  docker-compose.test.yml  latest-workflow-Dockerfile  latest-workflow-local-Dockerfile  utils.py
virtool-integration/virtool_integration/workflow/: Dockerfile  entrypoint.sh  workflow.py
virtool-integration/virtool_integration/workflow/integration_test_workflows/: sample.py  test_sample.py
virtool_workflow/: __init__.py  _executor.py  _graceful_exit.py  _runtime.py  _steps.py  builtin_fixtures.py  cli.py  cli_utils.py  context.py  decorator_api.py  decorators.py  discovery.py  environment.py  errors.py  execute.py  execute_workflow.py  features.py  files.py  hooks.py  options.py  redis.py  results.py  run.py  runtime.py  sentry.py  signals.py  test.py  test_utils.py  testing.py  utils.py  workflow.py  workflow_fixture.py
virtool_workflow_runtime/: __init__.py  _docker.py  _docker_events.py  _redis.py  _threading.py  autoload.py  cancellations.py  cli.py  config.py  db.py  discovery.py  environment.py  fixture_loading.py  hooks.py  job.py  job_loop.py  liveness.py  new_jobs.py  on_init.py  runtime.py  runtime_hooks.py  test_utils.py  uvloop_compatible_run.py
(+307 files in other folders)
