[project]
name = "virtool-workflow"
description = "A framework for developing bioinformatics workflows for Virtool."
version = "0.0.0"
authors = [
    {name = "Ian Boyes"},
    {name = "Reece Hoffman"},
    {name = "Blake Smith"},
    {name = "Ryan Fang"},
    {name = "Matt Curtis"},
    {name = "Aman Monga"},
    {name = "Bryce Davidson"},
    {name = "Christine Wong Chong"},
    {name = "Lilly Roberts"},
    {name = "Markus Swoveland"},
    {name = "Ryan Fang"},
]
dynamic = ["dependencies"]
license = "MIT"
maintainers = [
    {name = "Ian Boyes"},
    {name = "Reece Hoffman"},
]
readme = "README.md"
repository = "https://github.com/virtool/virtool-workflow"
requires-python = "3.12.3"

[projects.scripts]
run-workflow = "virtool_workflow.cli:cli_main"

[tool.poetry]
packages = [
    { include = "virtool_workflow" },
]

[tool.poetry.group.dev.dependencies]
piccolo-theme = "^0.22.0"
pytest = "^7.4.2"
pytest-aiohttp = "^1.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
pytest-structlog = "^0.6"
ruff = "^0.4.6"
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
sphinx-nameko-theme = "^0.0.3"
sphinx-toolbox = "^3.5.0"
syrupy = "^3.0.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
exclude = [
    "docs",
    ".eggs",
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest-cache",
    ".ruff_cache",
    "__pypackages__",
]

[tool.ruff.lint]
ignore = [
    "ANN101",
    "D203",
    "D213"
]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
