[project]
name = "virtool-workflow"
description = "A framework for developing bioinformatics workflows for Virtool."
version = "0.0.0"
authors = [
    {name = "Ian Boyes"},
    {name = "Reece Hoffman"},
    {name = "Blake Smith"},
    {name = "Ryan Fang"},
    {name = "Matt Curtis"},
    {name = "Aman Monga"},
    {name = "Bryce Davidson"},
    {name = "Christine Wong Chong"},
    {name = "Lilly Roberts"},
    {name = "Markus Swoveland"},
    {name = "Ryan Fang"},
]
dynamic = ["dependencies"]
license = "MIT"
maintainers = [
    {name = "Ian Boyes"},
    {name = "Reece Hoffman"},
]
readme = "README.md"
repository = "https://github.com/virtool/virtool-workflow"
requires-python = ">=3.12.3,<3.13.0"

[project.scripts]
run-workflow = "virtool_workflow.cli:cli_main"

[tool.poetry]
packages = [
    { include = "virtool_workflow" },
]

[tool.poetry.dependencies]
aiofiles = "^24.1.0"
aiohttp = "^3.12.14"
biopython = "^1.81"
click = "^8.2.1"
orjson = "^3.11.1"
pydantic-factories = "^1.17.3"
pyfixtures = "^1.0.0"
sentry-sdk = "^2.34.1"
structlog-sentry = "^2.2.1"
virtool = "^31.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
piccolo-theme = "^0.24.0"
pytest = "^7.4.2"
pytest-aiohttp = "^1.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.14.1"
pytest-structlog = "^1.0"
ruff = "^0.12.5"
sphinx = "^4.0.2"
sphinx-autobuild = "^2024.10.3"
sphinx-nameko-theme = "^0.0.3"
sphinx-toolbox = "^4.0.0"
syrupy = "^3.0.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
exclude = [
    "docs",
    ".eggs",
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest-cache",
    ".ruff_cache",
    "__pypackages__",
]

[tool.ruff.lint]
ignore = [
    "ANN101",
    "D203",
    "D213"
]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"tests/**/test_*.py" = [
    "ANN201",
    "S101",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
