[tool.poetry]
name = "virtool_integration"
version = "0.1.0"
description = "Integration tests for virtool and virtool_workflow."
authors = ["Blake Smith <blakeinvictoria@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
docker = "^5.0.0"
docker-compose = "^1.29.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
workflow-test = "virtool_integration.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
